# chat-app

backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/app/: mod.rs
backend/src/app/handlers/: mod.rs  urls.rs  views.rs
backend/src/app/services/: mod.rs  routing.rs
backend/src/app/utils/: chat_server.rs  mod.rs  websocket.rs
backend/src/app/utils/errors/: http.rs
frontend/: index.html  main.js  pnpm-lock.yaml  style.css
