[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

log = { version = "0", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
pretty_env_logger = "0"
dotenvy = "0"