[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0"
actix-web = "4"
actix-web-actors = "4"

log = { version = "0", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
pretty_env_logger = "0"
dotenvy = "0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rand = "*"